<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云车牌系统</string>
    <string name="helloActivity">离场订单</string>
    <string name="parkingInfoActivity">停车场</string>
    <string name="homePageActivity">停车场首页</string>
    <string name="loginActivity">登陆</string>
    <string name="currentOrderActivity">当前订单</string>
    <string name="historyOrderActivity">历史订单</string>
    <string name="currentOrderDetailsActivity">当前订单—订单详情</string>
    <string name="historyOrderDetailsActivity">历史订单—订单详情</string>
    <string name="RegisterActivity">注册</string>
    <string name="RegisterSuccessActivity">注册成功</string>
    <string name="RankingActivity">排行榜</string>
    <string name="SetActivity">设置</string>
    <string name="LastRankingActivity">上周排行</string>
    <string name="GetPasswordActivity">获取密码</string>
    <string name="AlreadyRecommend_user">已推荐用户</string>
    <string name="AlreadyRecommend_park">已推荐停车场</string>
    <string name="FeeScaleActivity">收费标准</string>
    <string name="photo">拍照</string>
    <string name="ShowPriceSettingActivity">价格详情</string>
    <string name="BackgroundActivity">后台管理</string>
    <string name="ShowMaxPhotoActivity">图片详情</string>
    <string name="MyMarkActivity">我的积分</string>
    <string name="LocationActivity">选取车场位置</string>
    <string name="OneKeyQueryActivity">一键查询</string>
    <string name="ParkingActivity">停车场信息</string>
    <string name="CarNumberInputActivity">记录车牌号</string>
    <string name="MyHomeActivity">我的信息</string>
    <string name="ChangePassWordActivity">修改密码</string>
    <string name="TakeCarNumber">拍照识别</string>
    <string name="ScoreRuleActivity">积分规则</string>
    <string name="RecommendActivity">推荐</string>
    <string name="ChangeParkingInfo">修改车场信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="query">一键查询</string>
    <string name="onlylost">查看逃单</string>
    <string name="submit">确定</string>
    <string name="xunfei_id">54058774</string>
    <string name="tingyun_id">5c1143af680c4e18a56c0bc1928f82a0</string>
    <string name="scan_tips">请尽量正面对准车牌照扫描!</string>
    <string name="takephoto">拍照识别</string>
    <string name="MyCaptureActivity">扫描识别</string>
    <string name="ChangeMyInfoActivity">修改姓名</string>
    <string name="CheckNumberActivity">校正车牌</string>
    <string name="InputCarNumber">手输车牌号</string>
    <string name="CarOrderActivity">查询当前订单</string>
    <string name="MyWalletActivity">我的钱包</string>
    <string name="WithdrawalActivity">提现</string>
    <string name="AddBankCardActivity">添加银行卡</string>
    <string name="MyBankCardActivity">我的银行卡</string>
    <string name="PaymentDetailActivity">收支明细</string>
    <string name="LostOrderRecord">逃单记录</string>
    <string name="PriceChangesAndCash">调价并结算</string>
    <string name="HistoryOrderLostOrderActivity">历史订单-逃单</string>
    <string name="LostOrderRecordDetailsActivity">逃单详情</string>

    <!-- HD版添加 -->
    <string name="replace_account">切换账号</string>
    <string name="more">设置</string>
    <string name="shutdown">关机</string>
    <string name="restart">重启</string>
    <string name="update">升级</string>
    <string name="workstation">工作站</string>
    <string name="uplift_pole">抬杆</string>
    <string name="searchnullplate">无牌</string>
    <string name="drop_pole">落杆</string>
    <string name="simulation_came_car">模拟\n来车</string>
    <string name="blue">蓝</string>
    <string name="car_card">车牌号</string>
    <string name="vertical_line">|</string>
    <string name="in_time">进入时间</string>
    <string name="select_wrokstation">选择工作站</string>
    <string name="select_worktype">选择工作模式</string>
    <string name="entrance">入口</string>
    <string name="exit">出口</string>
    <string name="entrance_record">入口图像记录</string>
    <string name="work_mode">工作模式:</string>
    <string name="manual">手动</string>
    <string name="auto">自动</string>
    <string name="please_search_plate">输入车牌</string>
    <string name="ChooseWorkstationActivity">选择工作站</string>
    <string name="tcb_system">云车牌系统</string>
    <string name="tcb_version">版本号</string>
    <string name="set_time">00:00</string>
    <string name="clear_order">结算订单</string>
    <string name="charge_finish">收费完成</string>
    <string name="free">免费</string>
    <string name="backup">返回</string>
    <string name="discount">减免</string>
    <string name="mobile_payment">手机支付中……</string>
    <string name="account_type_content">普通用户</string>
    <string name="account_type_tingchebao">云车牌系统会员</string>
    <string name="park_duration_content">0时0分</string>
    <string name="entrance_time_content">00:00</string>
    <string name="park_cost_content">0.0</string>
    <string name="still_pay">还需支付：</string>
    <string name="pay_all">停车费：</string>
    <string name="pay_before">已支付：</string>
    <string name="pay_discount">已减免：</string>
    <string name="car_image">车牌\n图像</string>
    <string name="car_num">车牌\n号码</string>
    <string name="car_type">车辆\n类型</string>
    <string name="park_duration">停车\n时长</string>
    <string name="entrance_time">入场\n时间</string>
    <string name="big_small_car">大\n小\n车</string>
    <string name="park_cost">车费：</string>
    <string name="rmb">元</string>
    <string name="simulation_car_plate">输入补录车牌</string>
    <string name="no_current_order">暂无当前订单！</string>
    <string name="occupy_carport_num">占用车位</string>
    <string name="idle_carport">空闲\n车位</string>
    <string name="work_data">上班\n时间</string>
    <string name="toll_collector">操作\n人员</string>
    <string name="toll_cartype">车辆\n类型</string>
    <string name="tcb_pay">电子\n支付</string>
    <string name="cash_pay">现金\n支付</string>
    <string name="share_carport_num">分享总数</string>
    <string name="occupy_carport">占用&#160;</string>
    <string name="share_carport">分享&#160;</string>
    <string name="car_number">车牌号</string>
    <string name="cash_total">现金:&#160;</string>
    <string name="phone_total">云车牌系统:&#160;</string>
    <string name="money">0</string>
    <string name="work_time"> </string>
    <string name="default_num">0</string>
    <string name="people">值班人</string>
    <string name="show_money">隐藏</string>
    <string name="in_park_cars">在场车辆</string>
    <string name="out_park_cars">离场车辆</string>
    <string name="add_account">添加账号</string>
    <string name="save_change">保存更改</string>
    <string name="no_order_tip">未找到入场记录,请手动搜索或点免费放行</string>
    <string name="police_car">军警车  一路顺风</string>
    <!-- <string name="isfuzy_search">是否开启模糊搜索</string> -->
    <string name="isfuzy_search">军警车免费</string>
    <string name="show_month_card">显示月卡用户</string>
    <string name="softkeyboard">软键盘显示</string>
    <string name="pole_worktype">入口识别自动抬杆</string>
    <string name="belive">置信度</string>
    <string name="confidence_level">建议90~99</string>
    <string name="setwifi">设置wifi</string>
    <string name="wifi"> 设置hiwifi</string>
    <string name="caruser_reward">收到一笔车主打赏</string>
    <string name="car_user">车主：</string>
    <string name="reward">打赏：</string>
    <string name="yes">确认</string>
    <string name="tcb_hint">云车牌系统提示</string>
    <string name="camera_error_hint">摄像头连接失败,正在重启修复</string>
    <string name="timing">5</string>
    <string name="after">稍后60s</string>
    <string name="change_after">稍后10s</string>
    <string name="change_server">切换服务器</string>

</resources>