<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/bg_green"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_idle_carport"
            style="@style/font_size"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/idle_carport" />

        <TextView
            android:id="@+id/tv_idle_carport_num"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/default_num"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_charge_number"
            android:layout_width="80dip"
            android:layout_height="45dip"
            android:background="@drawable/switch_account"
            android:gravity="center_vertical"
            android:textColor="@color/bg_green"
            android:textSize="25dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dip"
        android:layout_weight="3"
        android:background="@color/bg_green"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_work_data"
                style="@style/font_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/work_data" />

            <TextView
                android:id="@+id/tv_work_time"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/work_time"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_toll_collector"
                style="@style/font_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/toll_collector" />

            <Button
                android:id="@+id/btn_charge_people"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/tv_toll_collector"
                android:layout_weight="3"
                android:background="@drawable/switch_account"
                android:gravity="center_vertical"
                android:paddingLeft="15dip"
                android:paddingRight="1dp"
                android:textColor="@color/bg_green"
                android:textSize="25dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_tcb_pay"
                style="@style/font_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/tcb_pay" />

            <TextView
                android:id="@+id/tv_tcb_pay_money"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/default_num"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_cash_pay"
                style="@style/font_size"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/cash_pay" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_cash_pay_money"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/default_num"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_show_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pole_up_selector"
                    android:gravity="center"
                    android:text="@string/show_money"
                    android:textColor="@color/bg_green"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>