<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/app_icon_32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/caruser_reward"
            android:textColor="#CD6258"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/reward" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#40BAE5" >
    </View>

    <TextView
        android:id="@+id/tv_reward_carnumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:paddingLeft="20dp"
        android:text="@string/car_user"
        android:textColor="#676767"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_reward_money"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:paddingLeft="20dp"
        android:text="@string/reward"
        android:textColor="#676767"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:paddingLeft="20dp"
        android:text=""
        android:textColor="@color/bg_green"
        android:textSize="16sp"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EAEAEA" >
    </View>

    <Button
        android:id="@+id/bt_reward_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/bg_green"
        android:textSize="19sp" />

</LinearLayout>