<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_entrance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_car_icon"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/ln_entrance"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
	<ImageView 
	    android:id="@+id/img_entrance"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_entrance"
            style="@style/little_title"
            android:text="@string/entrance" />

        <Button
            android:id="@+id/btn_entrance_open_pole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dip"
            android:background="@drawable/btn_selector"
            android:text="@string/uplift_pole"
            android:textColor="@color/idle_green"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="85dp"
            android:layout_marginRight="3dip"
            android:background="@drawable/btn_selector"
            android:text="@string/photo"
            android:textColor="@color/idle_green"
            android:textSize="28sp" />
    </RelativeLayout>

</RelativeLayout>